refactor to use standard 'change' and 'drop'