@@ -2,18 +2,21 @@ package org.molgenis.emx2.graphql;
 
 import static org.molgenis.emx2.Constants.SETTINGS;
 import static org.molgenis.emx2.graphql.GraphqlConstants.*;
-import static org.molgenis.emx2.graphql.GraphqlSchemaFieldFactory.outputSettingsMetadataType;
+import static org.molgenis.emx2.graphql.GraphqlSchemaFieldFactory.outputSettingsType;
 
 import graphql.Scalars;
 import graphql.schema.*;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.molgenis.emx2.Database;
 import org.molgenis.emx2.User;
 
-public class GraphlAdminFieldFactory {
+public class GraphqlAdminFieldFactory {
+  private GraphqlAdminFieldFactory() {
+    // hide constructor
+  }
+
   // Output types
   private static GraphQLOutputType userType =
       GraphQLObjectType.newObject()
@@ -26,7 +29,7 @@ public class GraphlAdminFieldFactory {
           .field(
               GraphQLFieldDefinition.newFieldDefinition()
                   .name(SETTINGS)
-                  .type(GraphQLList.list(outputSettingsMetadataType))
+                  .type(GraphQLList.list(outputSettingsType))
                   .build())
           .build();
 
@@ -37,7 +40,7 @@ public class GraphlAdminFieldFactory {
             .name("_AdminType")
             .field(
                 GraphQLFieldDefinition.newFieldDefinition()
-                    .name("users")
+                    .name(USERS)
                     .argument(GraphQLArgument.newArgument().name(EMAIL).type(Scalars.GraphQLString))
                     .argument(GraphQLArgument.newArgument().name(LIMIT).type(Scalars.GraphQLInt))
                     .argument(GraphQLArgument.newArgument().name(OFFSET).type(Scalars.GraphQLInt))
@@ -55,28 +58,13 @@ public class GraphlAdminFieldFactory {
         .dataFetcher(
             dataFetchingEnvironment -> {
               Map<String, Object> result = new LinkedHashMap<>();
-              int limit = 100;
-              int offset = 0;
-              String email = null;
               // check for parameters
-              for (SelectedField s :
+              for (SelectedField selectedField :
                   dataFetchingEnvironment.getSelectionSet().getImmediateFields()) {
-                if (s.getName().equals("users")) {
-                  Map<String, Object> args = s.getArguments();
-                  if (args.containsKey(LIMIT)) limit = (int) args.get(LIMIT);
-                  if (args.containsKey(OFFSET)) offset = (int) args.get(OFFSET);
-                  if (args.containsKey(EMAIL)) email = (String) args.get(EMAIL);
+                if (selectedField.getName().equals(USERS)) {
+                  result.put(USERS, getUsers(selectedField, db));
                 }
-                if (email != null) {
-                  result.put("users", List.of(toGraphqlUser(db.getUser(email))));
-                } else {
-                  result.put(
-                      "users",
-                      db.getUsers(limit, offset).stream()
-                          .map(user -> toGraphqlUser(user))
-                          .collect(Collectors.toList()));
-                }
-                if (s.getName().equals("users")) {
+                if (selectedField.getName().equals(USERS)) {
                   result.put("userCount", db.countUsers());
                 }
               }
@@ -84,6 +72,20 @@ public class GraphlAdminFieldFactory {
             })
         .type(adminType)
         .build();
+  }
+
+  private static Object getUsers(SelectedField selectedField, Database db) {
+    Map<String, Object> args = selectedField.getArguments();
+    int limit = args.containsKey(LIMIT) ? (int) args.get(LIMIT) : 100;
+    int offset = args.containsKey(OFFSET) ? (int) args.get(OFFSET) : 0;
+    String email = args.containsKey(EMAIL) ? (String) args.get(EMAIL) : null;
+    if (email != null) {
+      return List.of(toGraphqlUser(db.getUser(email)));
+    } else {
+      return db.getUsers(limit, offset).stream()
+          .map(GraphqlAdminFieldFactory::toGraphqlUser)
+          .toList();
+    }
   }
 
   private static Map<String, Object> toGraphqlUser(User user) {
@@ -96,6 +98,6 @@ public class GraphlAdminFieldFactory {
   public static Object mapToSettings(Map<String, String> settings) {
     return settings.entrySet().stream()
         .map(entry -> Map.of(KEY, entry.getKey(), VALUE, entry.getValue()))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
